# salesforce-ocapi

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
examples/: .env.default  bearertokenonly.py  bearertokenonlycategory.py  bulkemailslookup.py  codeversioncheck.py  databreach.csv  orderfailedcount.py  orderfix.py  pagination.py  timezonecheck.py  webdavstream.py  webdavtest.py
salesforce_ocapi/: __init__.py
salesforce_ocapi/auth/: __init__.py  helper.py
salesforce_ocapi/endpoints/: __init__.py
salesforce_ocapi/endpoints/data/: __init__.py  code_versions.py  custom_objects.py  customer_lists.py  customer_objects_search.py  global_jobs.py  job_execution_search.py  jobs.py  libraries.py
salesforce_ocapi/endpoints/shop/: __init__.py  baskets.py  order_search.py  orders.py  product_search.py  site.py
salesforce_ocapi/endpoints/webdav/: __init__.py  client.py
salesforce_ocapi/utils/: __init__.py  decorators.py  exceptions.py  fs.py  paginator.py  request.py  webdav.py
tests/: conftest.py  test_salesforce_ocapi.py
tests/auth/: test_bmauth.py  test_clientauth.py
