[tool.poetry]
name = "salesforce-ocapi"
version = "0.1.0"
description = ""
authors = ["Daniel Loader <hello@danielloader.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
webdavclient3 = "^3.14.4"
tqdm = "^4.46.0"
pydantic = "^1.5.1"
pyyaml = "^5.3.1"
bs4 = "^0.0.1"
opnieuw = "^1.1.0"
pytz = "^2020.1"
jmespath = "^0.10.0"
httpx = "^0.13.3"
tabulate = "^0.8.7"
respx = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.1"
rstcheck = "^3.3.1"
boto3 = "^1.14.9"
pre-commit = "^2.6.0"
respx = "^0.11.2"

[tool.isort]
profile = "black"
src_paths = ["salesforce_ocapi"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
